integration-tests/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-manager-test
  labels:
    app: kubernetes-manager-test
    test-kubernetes-manager: "true"
  annotations:
    kubernetes-manager/git-project-origin: "git@github.com:maksim-paskal/kubernetes-manager.git"
    kubernetes-manager/git-branch: some-git-tag
    kubernetes-manager/requiredRunningPodsCount: "1"
    kubernetes-manager/git-project-id: gitlab-project-id
    kubernetes-manager/registry-tag: some-docker-tag
    kubernetes-manager/default-pod: app=nginx:nginx
spec:
  tls:
  - hosts:
    - backend-some-feature-branch.yourdomain.com
  rules:
  - host: backend-some-feature-branch.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment
            port:
              number: 80
